# laern_rust

01_rustlings/exercises/: quiz1.rs
01_rustlings/exercises/advanced_errors/: advanced_errs1.rs  advanced_errs2.rs
01_rustlings/exercises/collections/: hashmap1.rs
01_rustlings/exercises/conversions/: from_str.rs
01_rustlings/exercises/error_handling/: errors4.rs
01_rustlings/exercises/move_semantics/: move_semantics5.rs  move_semantics6.rs
01_rustlings/exercises/primitive_types/: primitive_types2.rs
01_rustlings/exercises/standard_library_types/: arc1.rs  iterators2.rs  iterators3.rs
01_rustlings/exercises/structs/: structs1.rs  structs3.rs
actix-gcd/src/: main.rs
branches/src/: main.rs
crash/: Cargo.toml
crash/src/: h2.rs  http11.rs  main.rs
exercises/: quiz1.rs  quiz2.rs
exercises/enums/: enums3.rs
exercises/error_handling/: errors4.rs  errors6.rs
exercises/move_semantics/: move_semantics2.rs  move_semantics3.rs
exercises/option/: option2.rs
exercises/structs/: structs2.rs
exercises/variables/: variables2.rs  variables5.rs
fundamental-type/src/: main.rs
guessing_game/src/: main.rs
hello/: .gitignore
hello/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
own_and_move/: Cargo.toml
own_and_move/src/: main.rs
pokemon/: .gitignore  Dockerfile  README.md
pokemon/server/: Cargo.toml
pokemon/server/src/: main.rs
quickreplace/: Cargo.toml
quickreplace/src/: main.rs
reference/src/: main.rs
todo-cli/src/: main.rs
variables/src/: main.rs
