[package]
name = "crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
hyper = { version = "0.14.20", features = ["client", "tcp", "http1", "stream"] }
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }
