[package]
name = "crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.25"
hyper = { version = "0.14.20", features = ["client", "tcp", "http1", "stream"] }
hyper-rustls = "0.23.0"
nom = "7.1.1"
reqwest = "0.11.12"
rustls = "0.20.7"
rustls-native-certs = "0.6.2"
tokio = { version = "1.21.2", features = ["full"] }
tokio-rustls = "0.23.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
